@@ -1110,3 +1110,4 @@ The following functions accept any form a path. The INI and language INI functio
             Fixed: Check ItemIndex for potential out-of-bounds array access
 2019-10-08  Modified: Return type of OSDMenuGetStringHeight() and OSDMenuGetStringWidth() changed from integer to dword
 2019-10-16  Added: OSDMenuItemPassDrawing() to allow a user-controlled item drawing
+            Added: TMSOSDMenu PassDrawing demo
